# capsulecrm-python

./: .gitignore  README.md  pyproject.toml  setup.py
capsulecrm/: client.py  exceptions.py
